--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -270,5 +270,17 @@ input[type="search"]:hover{
 .tg .tg-uys7{border-color:inherit;text-align:center}
 .tg .tg-7jts{font-size:18px;border-color:inherit;text-align:center;vertical-align:top}
 .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
-
+.tg .tg-ik6k{font-weight:bold;background-color:#999903;color:#ffffff;border-color:inherit;text-align:center}
+.tg .tg-d1ws{font-weight:bold;background-color:#999903;color:#000000;border-color:inherit;text-align:center}
+.tg .tg-2ab3{font-weight:bold;background-color:#38fff8;color:#000000;border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-ryqc{font-weight:bold;background-color:#9698ed;color:#000000;border-color:inherit;text-align:center}
+.tg .tg-f5i8{font-weight:bold;font-size:16px;background-color:#000000;color:#ffffff;border-color:#000000;text-align:center;vertical-align:top}
+.tg .tg-6fpv{font-weight:bold;background-color:#9698ed;color:#000000;border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-lsex{font-weight:bold;background-color:#9aff99;color:#000000;border-color:inherit;text-align:center}
+.tg .tg-2pb4{font-weight:bold;background-color:#9aff99;color:#000000;border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-rma0{font-weight:bold;background-color:#38fff8;color:#000000;border-color:inherit;text-align:center}
+.tg .tg-k3k5{font-weight:bold;background-color:#999903;color:#ffffff;border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-qr00{font-weight:bold;background-color:#cb0000;color:#000000;border-color:inherit;text-align:center}
+.tg .tg-l8q8{font-weight:bold;background-color:#cb0000;color:#ffffff;border-color:inherit;text-align:center}
+.tg .tg-pyll{font-weight:bold;background-color:#cb0000;color:#ffffff;border-color:inherit;text-align:center;vertical-align:top}
 }
